SVG: Use path attribute for animateMotion

Avoids a bug where the path attribute was updated but the style had not
yet been recalculated. The SMIL animateMotion element was notified of
the update but then read the now-invalid style.

BUG=626935

Review-Url: https://codereview.chromium.org/2227463002
Cr-Commit-Position: refs/heads/master@{#411264}

Former-commit-id: 403a0d6c1bcfa02363f764acd1ba56145263bafa